# leg_tracker_ros2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
.docker/: Dockerfile  before_bringup.sh  docker_exec.sh  entrypoint.sh  run.sh
include/leg_tracker_ros2/: cluster_features.hpp  laser_processor.hpp
json/: log_config.json
launch/: demo_stationary_simple_environment.launch.py  leg_tracker.launch.py  occupancy_grid_mapping.launch.py
msg/: Person.msg
rosbag/0_静止していても追従対象が違った/: metadata.yaml
rosbag/demos/demo_stationary_cluttered_environment/: metadata.yaml
rosbag/demos/demo_stationary_simple_environment/: metadata.yaml
rosbag/demos/rviz/: demo_stationary_simple_environment.rviz
rosbag/robot_moving/rosbag2_2024_09_01-07_20_34/: metadata.yaml
rosbag/robot_moving/rosbag2_2024_09_01-07_24_59_乗り移りあり/: metadata.yaml
rosbag/robot_moving/rosbag2_2024_09_01-07_25_37/: metadata.yaml
rosbag/robot_moving/rosbag2_2024_09_01-07_26_08_乗り移りなし/: metadata.yaml
rosbag/rosbag2_2024_08_15-10_16_41/: metadata.yaml
rosbag/rosbag2_2024_08_15-10_18_19/: metadata.yaml
rosbag/rosbag2_2024_09_01-07_15_02/: metadata.yaml
rosbag/rosbag2_2024_09_01-07_16_24/: metadata.yaml
scripts/: config.py  joint_leg_tracker.py
src/: cluster_features.cpp  detect_leg_clusters.cpp  laser_processor.cpp  local_occupancy_grid_mapping.cpp
